<resources>
    <string name="app_name">StanMusic</string>
    <string name="press_exit_again">再按一次退出应用</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册账号</string>
    <string name="search">搜索</string>
    <string name="login_phone_number">手机号登录</string>
    <string name="in_developing">该功能还在开发中~</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_phone_number_correctly">请输入有效的电话号码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="pwd_must_less_than_30">请输入小于30位的密码</string>
    <string name="enter_correct_password">请正确输入密码</string>
    <string name="msg">我的消息</string>
    <string name="mi">听歌识曲</string>
    <string name="ticket">演出</string>
    <string name="friend">朋友</string>
    <string name="theme">个性换肤</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>
    <string name="logout">退出</string>

    <string name="mine">我的</string>
    <string name="wow">发现</string>
    <string name="feed">云村</string>
    <string name="video">视频</string>


    <string name="mine_fm">私人FM</string>


    <string name="colorBlack">#333333</string>


    <string name="local_music">本地音乐</string>
    <string name="recent_play">最近播放</string>
    <string name="my_radio">我的电台</string>
    <string name="my_collection">我的收藏</string>
    <string name="download_manager">本地下载</string>
    <string name="create_song">创建的歌单</string>
    <string name="collection_song">收藏的歌单</string>
    <string name="smart_play">心动模式</string>
    <string name="item_delete">删除</string>
    <string name="item_edit">编辑歌单信息</string>
    <string name="item_share">分享</string>
    <string name="item_download">下载</string>
    <string name="build_new_song_list">创建新歌单</string>
    <string name="management_song_list">歌单管理</string>
    <string name="Import_song_list">截图导入歌单</string>
    <string name="restore_song_list">恢复歌单</string>
    <string name="build_song_list">新建歌单</string>
    <string name="title_song_list">歌单</string>

</resources>
